k8s/mlflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  labels:
    app: modelship-mlflow
spec:
  type: ClusterIP
  selector:
    app: modelship-mlflow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
