k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modelship-service
  labels:
    app: modelship-api
spec:
  type: ClusterIP
  selector:
    app: modelship-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
